[gd_scene load_steps=7 format=3 uid="uid://ct0qsrj2gvian"]

[ext_resource type="Script" path="res://addons/escoria/ui-library/menus/pause_menu/pause_menu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c8g6fkijpqs5" path="res://addons/escoria/ui-library/menus/options/options.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dahx3mi1ifmkk" path="res://addons/escoria/assets/image/escoria-logo-small.png" id="3"]
[ext_resource type="PackedScene" uid="uid://b4pk2x8jmkvbj" path="res://addons/escoria/ui-library/menus/load_save/save/save_game.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://1nxtqni8x2yy" path="res://addons/escoria/ui-library/menus/load_save/load/load_game.tscn" id="5"]
[ext_resource type="Theme" path="res://addons/escoria/assets/theme.tres" id="6"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="save_game" parent="." instance=ExtResource("4")]
visible = false
layout_mode = 1
theme = ExtResource("6")

[node name="load_game" parent="." instance=ExtResource("5")]
visible = false
layout_mode = 1

[node name="options" parent="." instance=ExtResource("2")]
visible = false
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -421.0
offset_right = 446.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3")

[node name="menuitems" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="continue" type="Button" parent="VBoxContainer/menuitems"]
layout_mode = 2
size_flags_vertical = 3
text = "CONTINUE_GAME"

[node name="save_game" type="Button" parent="VBoxContainer/menuitems"]
layout_mode = 2
size_flags_vertical = 3
text = "SAVE_GAME"

[node name="load_game" type="Button" parent="VBoxContainer/menuitems"]
layout_mode = 2
size_flags_vertical = 3
text = "LOAD_GAME"

[node name="options" type="Button" parent="VBoxContainer/menuitems"]
layout_mode = 2
text = "OPTIONS"

[node name="quit" type="Button" parent="VBoxContainer/menuitems"]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT"

[connection signal="back_button_pressed" from="save_game" to="." method="_on_save_game_back_button_pressed"]
[connection signal="back_button_pressed" from="load_game" to="." method="_on_load_game_back_button_pressed"]
[connection signal="back_button_pressed" from="options" to="." method="_on_options_back_button_pressed"]
